--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.4.1
 Django==3.2.6
 djangorestframework==3.12.4
-gunicorn==20.1.0
+django-cors-headers==3.7.0
 pytz==2021.1
 sqlparse==0.4.1
